fixed spacing for first group annual plan

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body{
     align-items:center;
     justify-content:space-around;
     width:80%;
-    /* max-height:10vh; */
+    height:10vh;
     margin-top:3rem;
     background: rgb(248, 248, 255);
     border-radius: 10px;
@@ -80,7 +80,8 @@ body{
 .firstGroup{
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    width:43%;
+    justify-content: space-between;
     margin-right:3.5rem;
 }
 
